2008-04-23  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	* src/bin/Makefile.am:
	* src/lib/Makefile.am:
	* src/lib/dlfcn/Makefile.am:
	* src/lib/mman/Makefile.am:
	use -Wl,--enable-auto-import with cegcc
	fix warning with newest autoconf

	* src/lib/dlfcn/dlfcn.c: (string_to_wchar):
	include wchar.h and fix warnings

	* src/lib/mman/mman.c:
	use relative path to include sys/mman.h

2008-03-28  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	remove the stat structure and add guards

	* src/lib/dlfcn/dlfcn.c:
	include limits.h also for the cegcc compiler

2008-03-23  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	add POSIX definitions

	* src/lib/evil.c:
	make realpath available with cegcc. The function
	just copy the file name to the resolved name with
	that compiler

2008-03-13  Vincent Torri  <doursse at users dot sf dot net>

	* INSTALL:
	* README:
	additional notes for compilations with cegcc or mingw32ce

	* configure.ac:
	use 'win32' instead of 'cegcc' or 'mingw'

	* src/lib/dlfcn/dlfcn.c (dlopen):
	cegcc does not support LOAD_WITH_ALTERED_SEARCH_PATH.
	Use LoadLibrary instead of LoadLibraryEx in that case.

2008-03-05  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	* src/lib/evil.c:
	cegcc or mingwce32 does not like relative path,
	so _fullpath or other similar function do not exist
	on Winodws mobile.

	* src/lib/mman/mman.c:
	missing #

2008-03-05  Vincent Torri  <doursse at users dot sf dot net>

	fix compilation with cegcc and minor fixing

	* COPYING:
	copyright update

	* configure.ac:
	* src/lib/Evil.h:
	* src/lib/dlfcn/dlfcn.h:
	* src/lib/mman/sys/mman.h:
	define EFL_EVIL_BUILD in config.h for managing correctly EAPI

	* src/bin/test_pipe.c:
	stdio.h is needed after winsock2.h for mingw32ce

	* src/lib/dlfcn/dlfcn.c (get_last_error), (dlopen), (dlsym):
	* src/lib/evil.c:
	fix some heafer files inclusion on cegc platform.
	first step of mingw32ce support
