@@ -1,7 +1,7 @@
 
 MAINTAINERCLEANFILES = Makefile.in
 
-SUBDIRS = dlfcn mman
+SUBDIRS = . dlfcn mman
 
 lib_LTLIBRARIES = libevil.la
 
@@ -10,5 +10,6 @@ libevil_la_SOURCES = evil.c
 
 libevil_la_CFLAGS = @win32_cflags@
 libevil_la_LIBADD = @win32_libs@
+libevil_la_DEPENDENCIES = $(top_builddir)/config.h
 libevil_la_LDFLAGS = -no-undefined @lt_enable_auto_import@ -version-info @version_info@
 
